--- a/templates/ticket_list.html
+++ b/templates/ticket_list.html
@@ -31,12 +31,12 @@
     </div>
     <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.5.1.js"></script>
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-        <!-- <script src = "https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script> -->
+        <script src = "https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
         <script src = "https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap.min.js"></script>
 		<script type="text/javascript">
 		$(document).ready(function() {
 			$('#tickets').DataTable({
-				"sPaginationType": "bs_two_button"
+				"pagingType": "full_numbers"
 			});	
 			$('#tickets').each(function(){
 				var datatable = $(this);
@@ -52,4 +52,3 @@
 		</script>
 </body>
 </html>
-
