--- a/templates/something_is_not_working.html
+++ b/templates/something_is_not_working.html
@@ -6,9 +6,9 @@
     <body>
         <div id="wrap">
             <div class="container">
-            <h3 align = 'center' class = 'alert alert-warning'><strong>Oops!</strong> Something went wrong</h3>
-            <p align = 'center' class = 'alert alert-warning'> Response status: {{response.status_code}}</p>
-            <p align = 'center' class = 'alert alert-warning'> Error message: {{response.reason}}</p>
+            <h3 style="text-align:center;" class = 'alert alert-warning'><strong>Oops!</strong> Something went wrong</h3>
+            <p style="text-align:center;" class = 'alert alert-warning'> Response status: {{response.status_code}}</p>
+            <p style="text-align:center;" class = 'alert alert-warning'> Error message: {{response.reason}}</p>
             </div>
         </div>
     </body>
